--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -15,7 +15,7 @@ footer.footer.background-inverse
   .container
     .text-center
       .pull-center
-        span © 2016-2017 DeployStack.
+        span © 2016-#{new Date().getFullYear()} DeployStack.
         br
         span Some of the links are #[a(href="#" data-toggle="modal", data-target="#affiliations-disclaimer", aria-label="Affiliations disclaimer information") affiliate links]
         br
