fix non-working modals

--- a/views/cdn.pug
+++ b/views/cdn.pug
@@ -17,6 +17,7 @@ mixin cdn77-coupon
 include includes/section-mixins
 //----------------------------------- CONTENT -------------------------------//
 block content
+  include includes/modals/cdn-modals
   +section-hero(content)
   main
     .main.main-raised.pb6.mb6
