--- a/views/emails.pug
+++ b/views/emails.pug
@@ -12,6 +12,7 @@ mixin mailgun-signup
 include includes/section-mixins
 //----------------------------------- CONTENT -------------------------------//
 block content
+  include includes/modals/emails-modals
   +section-hero(content)
   main
     .main.main-raised.pb6.mb6
@@ -41,8 +42,10 @@ block content
                           li.light-grey Free plan
                           li 12,000 emails per month
                           li 2,000 subscribers
-                          li Transactional emails through mandrill<br>
-                            | (requires paid plan)
+                          li Free&nbsp;
+                            a(rel="nofollow" target="_blank", href="https://mailchimp.com/automate/") automation emails
+                          li Transactional emails (API)<br>
+                            | available with #[a(rel="nofollow" target="_blank", href="https://mandrill.com/") Mandrill] (paid)
                           li
                             button.btn.btn-sm.btn-info(type="button", data-toggle="modal", data-target="#mailchimp-coupon", aria-label="MailChimp coupon code")
                               span.b Get $30 bonus &nbsp;
