--- a/views/includes/modals/emails-modals.pug
+++ b/views/includes/modals/emails-modals.pug
@@ -4,9 +4,8 @@
   .modal-dialog(role="document")
     .modal-content
       .modal-header
-        button.close(type="button", data-dismiss="modal", aria-hidden="true", aria-label="Close") &times;
       .modal-body.text-center
-        p Everyone gets $30 credits when they sign up for MailChimp.<br>
-          | Simply click the "Open MailChimp" button and register.
+        p When you sign up to MailChimp using someone's referral link, both of you will receive $30 in MailChimp's credits that can be used when you become a paying customer.
+        p Simply click the "Open MailChimp" button and register to receive your credits.
       .modal-footer
         button.btn.btn-default.btn-simple(type="button", data-dismiss="modal") Close
