--- a/views/ci.pug
+++ b/views/ci.pug
@@ -42,7 +42,7 @@ block content
                     .row
                       +pricing-card("CircleCI")
                         ul
-                          li 1500 build minutes per month for free (#[a(target="_blank" href="https://discuss.circleci.com/t/free-account-build-minutes/1125/8") is that enough for me?])
+                          li 1000 build minutes per month for free (#[a(target="_blank" href="https://discuss.circleci.com/t/free-account-build-minutes/1125/8") is that enough for me?])
                           li Additional containers cost #[strong $50]/month
                           li Paid OS X plans to build in an Apple environment
                           li 4 Linux containers and OS X plan<br>
@@ -67,7 +67,7 @@ block content
                           li Paid plans starting from #[strong $29]/month <br>
                           li Free for open source projects, <br>
                             | offers #[a(target="_blank" href="https://semaphoreci.com/docs/education-plans.html") educational plans] and <br>
-                            | #[a(target="_blank" href="https://semaphoreci.com/docs/does-semaphore-offer-a-discount-for-non-profits.html") discounts for non-profits]
+                            | #[a(target="_blank" href="https://semaphoreci.com/docs/non-profit-discount.html") discounts for non-profits]
                           li Native Docker support
                           li Supports GitHub and Bitbucket
                           li
@@ -96,7 +96,7 @@ block content
                       +pricing-card("GoCD")
                         ul
                           li #[strong Free] and open source
-                          li Paid support provided by #[a(target="_blank" href="https://www.thoughtworks.com/go/") ThoughtWorks]
+                          li Paid support provided by #[a(target="_blank" href="https://www.gocd.org/enterprise/support") ThoughtWorks]
                           li Multiple plugins
                           li Cross-platform
                           li
