update static websites

--- a/views/static.pug
+++ b/views/static.pug
@@ -59,7 +59,7 @@ block content
                       +pricing-card("Surge", "col-xs-12 col-sm-4 col-sm-offset-2")
                         ul
                           li Free plan with unlimited websites, custom domains and basic SSL
-                          li Paid plan: #[strong $13]/month/project
+                          li Paid plan: #[strong $30]/month
                           li CLI and dashboard interface
                           li Global CDN
                           li Custom SSL (paid plan)
@@ -95,10 +95,6 @@ block content
                           li Free SSL certificates
                           li HTTP2 support
                           li Requires manual deployment
-                          li Not only for static pages<br>
-                            | (various tools and infrastructure for all kinds of websites and apps)
-                          li Functions - serverless backend (like Amazon Lambda)
+                          li Provides hosting, DB, files storage, Cloud Functions (like AWS Lambda), phone authentication, Machine Learning Kit.
                           li
-                            .li-filler25
-                            .li-filler38
                             +firebase-signup
