--- a/views/cloud.pug
+++ b/views/cloud.pug
@@ -34,29 +34,30 @@ block content
                   +aws-signup
             +pricing-card('Google Cloud')
               ul
-                li $300 free credits to spend during first 12-months
+                li $300 free credits to spend during first 12 months
                 li #[a(href="https://cloud.google.com/free/docs/always-free-usage-limits" target="_blank") Always Free tier]:<br>
-                  | 1 f1-micro VPS, 1GB NoSQL DB,<br>
+                  | 1 f1-micro VPS<br>
+                  | 1 GB NoSQL DB,<br>
                   | 28 hours/day of Google App Engine,<br>
-                  | 5GB of cloud storage, 2 000 000 cloud functions invocations and more
+                  | 5 GB of cloud storage<br>
+                  | 2 000 000 cloud functions invocations<br>
+                  | and more
                 li
-                  .li-filler16
                   .li-filler21
-                  .li-filler25
                   .li-filler38
                   .li-filler38
                   .li-filler38
                   +gcp-signup
             +pricing-card('Azure')
               ul
-                li 30 days free trial with $200 free credits
-                li Free for 12 months:<br>
+                li $200 free credits to spend during 30 days
+                li 12 months free trial of some services:
                   | 750 hours/month of<br>
                   | Linux and Windows VM,<br>
                   | 2x 64GB managed disks,<br>
                   | 5GB of File storage,<br>
                   | 250GB SQL database and more
-                li #[a(href="https://azure.microsoft.com/en-us/free/") Always free tier]:<br>
+                li #[a(href="https://azure.microsoft.com/en-us/free/" target="_blank") Always free tier]:<br>
                   | 10 web, mobile or API apps,<br>
                   | 1 000 000 serverless functions/month<br>
                   | and more
@@ -66,5 +67,5 @@ block content
         .container
           section.row.mt5.mb5
             .col-sm-12
-              p Cloud computing platforms are complex and hard to compare (the list of features and pricing is changed often).<br>
+              p Cloud computing platforms are complex and hard to compare (the list of features and pricing is changing often).<br>
                 | Based on a specific use case, you will have to pick the best option yourself. Check those articles if you need help choosing: #[a(href="https://www.sitepoint.com/a-side-by-side-comparison-of-aws-google-cloud-and-azure/" target="_blank") Sitepoint], #[a(href="https://news.ycombinator.com/item?id=11515505" target="_blank") Hacker News], #[a(href="http://www.rightscale.com/blog/cloud-cost-analysis/aws-vs-azure-vs-google-cloud-pricing-compute-instances" target="_blank") RightScale].
