--- a/views/domain.pug
+++ b/views/domain.pug
@@ -6,7 +6,7 @@ mixin namecheap-signup
 mixin namesilo-signup
   a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.namesilo.com/?rid=79c3e12uv") Open namesilo
 mixin 1and1-signup
-  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="https://www.1and1.com/com-domain?ac=OM.US.US469K02463T2103a") Open 1&1
+  a.btn.btn-primary.b(rel="nofollow" target="_blank", href="http://www.ionos.com/?ac=OM.US.US469K02463T2103a") Open 1&1 IONOS
 
 include includes/section-mixins
 
@@ -59,7 +59,7 @@ block content
                   span.label.label-default.price__label .pizza
                 li
                   +namesilo-signup
-            +pricing-card('1&1')
+            +pricing-card('1&1 IONOS')
               ul
                 li
                   span #[strong $15] (#[strong $1] first year) for&nbsp;
@@ -98,5 +98,5 @@ block content
                   | Any personal recommendations?
                 +accordion-body('domain-recommendation')
                   p When it comes to what type of domain you should choose - in 99% of cases you will be fine with #[strong .com]. It's a standard for most websites and it will allow you to avoid any kind of confusion (people will pay more attention to the website's name, not the extension, when they try to remember it, so they might automatically assume that it ends with .com). However, in some cases getting a custom domain extension might help you to distinguish yourself from others: .pizza for a pizzeria or .museum for a museum can have a very good effect.
-                  p When it comes to which company you should choose - not always cheaper is better. Some companies will offer you a cheap first year but then next years will be quite expensive and moving your domain to a different company will be a hassle. If you want to validate an idea for a project, then it's fine to choose anything cheap like 1&1. If your project is successful after a year, you probably can afford to pay more or move the domain. If it isn't - well then you probably don't need that domain anymore. If you know that you want to keep the domain for longer, I would use the Namecheap - they have good prices and very good reviews. Namesilo is a compromise between the other two companies - they are slightly cheaper than Namecheap, have better reviews than 1&1, but their interface could be better.
+                  p When it comes to which company you should choose - not always cheaper is better. Some companies will offer you a cheap first year but then next years will be quite expensive and moving your domain to a different company will be a hassle. If you want to validate an idea for a project, then it's fine to choose anything cheap like 1&1 IONOS. If your project is successful after a year, you probably can afford to pay more or move the domain. If it isn't - well then you probably don't need that domain anymore. If you know that you want to keep the domain for longer, I would use the Namecheap - they have good prices and very good reviews. Namesilo is a compromise between the other two companies - they are slightly cheaper than Namecheap, have better reviews than 1&1 IONOS, but their interface could be better.
 
