--- a/views/domain.pug
+++ b/views/domain.pug
@@ -71,7 +71,7 @@ block content
                   span #[strong $50] (#[strong $35] first year) for&nbsp;
                   span.label.label-default.price__label .io
                 li
-                  span #[strong $70] (#[strong $70] first year) for&nbsp;
+                  span #[strong $70] for&nbsp;
                   span.label.label-default.price__label .pizza
                 li
                   +1and1-signup
