Update content of pages

--- a/views/cdn.pug
+++ b/views/cdn.pug
@@ -40,12 +40,12 @@ block content
                     .row
                       +pricing-card("KeyCDN")
                         ul
-                          li Transfer: #[strong 0.04 - 0.16 $/GB]
+                          li Transfer: #[strong 0.04 - 0.14 $/GB]
                           li Free pull (#[a(rel="nofollow" target="_blank", href="https://www.keycdn.com/support/push-storage-pricing") paid push]) storage
                           li Points of presence: 30+
                           li Transfer discounts start from 40TB
-                          li Minimum usage: #[strong $49] per year<br>
-                            | (credits expire after 1 year)
+                          li Minimum usage: #[strong $4]/month<br>
+                            | (minimum payment is $29)
                           li
                             .li-filler38
                             .li-filler25
@@ -57,7 +57,7 @@ block content
                           li Free storage (up to 50GB)
                           li Points of presence: 32
                           li Transfer discounts start from 21TB
-                          li Minimum recharge: #[strong $149]<br>
+                          li Minimum recharge: #[strong $199]<br>
                             | (valid for 1 year)
                           li
                             +cdn77-coupon
@@ -93,4 +93,4 @@ block content
             .col-sm-12
               h3 Why should I use a CDN?
               p Most common benefit is the speed improvement - content of your website is distributed in different Points of Presence around the world. Each time someone visits your website, the CDN will deliver the files from the closest location, making you website load faster. Also, using a CDN can save you some bandwith, as the large files will no longer be served from your servers.
-              p Having a CDN can help you in case of a DDoS attack (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time ;) ), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
+              p Having a CDN can help you in case of a DDoS attack (Distributed Denial-of-Service). Instead of all the traffic coming to your servers and killing them almost instantly - unless you are prepared for traffic spikes 1000x bigger than the average (in which case, you are probably terribly overpaying for the hosting most of the time 😉), those companies have specialized solutions for defending against a DDoS (a lot more traffic is needed to take them down).
