--- a/views/domain.pug
+++ b/views/domain.pug
@@ -29,12 +29,10 @@ block content
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .org
                 li
-                  span.b $29.88
-                  span &nbsp;(#[strong $34.88] renewal)
-                  span &nbsp;for&nbsp;
+                  span #[strong $34.88] (#[strong $25.88] first year) for&nbsp;
                   span.label.label-default.price__label .io
                 li
-                  span.b $39.88
+                  span.b $44.88
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .pizza
                 li
@@ -46,16 +44,14 @@ block content
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .com
                 li
-                  span.b $10.79
-                  span &nbsp;for&nbsp;
+                  span #[strong $10.79] (#[strong $8.88] first year) for&nbsp;
                   span.label.label-default.price__label .org
                 li
-                  span.b $35.99
+                  span.b $32.88
                   span &nbsp;for&nbsp;
                   span.label.label-default.price__label .io
                 li
-                  span.b $37.99
-                  span &nbsp;for&nbsp;
+                  span #[strong $37.99] (#[strong $6.39] first year) for&nbsp;
                   span.label.label-default.price__label .pizza
                 li
                   +namesilo-signup
@@ -99,4 +95,5 @@ block content
                 +accordion-body('domain-recommendation')
                   p When it comes to what type of domain you should choose - in 99% of cases you will be fine with #[strong .com]. It's a standard for most websites and it will allow you to avoid any kind of confusion (people will pay more attention to the website's name, not the extension, when they try to remember it, so they might automatically assume that it ends with .com). However, in some cases getting a custom domain extension might help you to distinguish yourself from others: .pizza for a pizzeria or .museum for a museum can have a very good effect.
                   p When it comes to which company you should choose - not always cheaper is better. Some companies will offer you a cheap first year but then next years will be quite expensive and moving your domain to a different company will be a hassle. If you want to validate an idea for a project, then it's fine to choose anything cheap like 1&1 IONOS. If your project is successful after a year, you probably can afford to pay more or move the domain. If it isn't - well then you probably don't need that domain anymore. If you know that you want to keep the domain for longer, I would use the Namecheap - they have good prices and very good reviews. Namesilo is a compromise between the other two companies - they are slightly cheaper than Namecheap, have better reviews than 1&1 IONOS, but their interface could be better.
+                  p Another popular solution is #[a(target="_blank", href="https://domains.google") Google Domains]. It's slightly more expensive than Namecheap or Namesilo, but if you are using other products from Google, it might be more convenient for you. Unfortunately, as of 25.10.2019, Google Domains is only #[a(target="_blank", href="https://support.google.com/domains/answer/4639612") available in 15 countries].
 
