--- a/views/vc.pug
+++ b/views/vc.pug
@@ -31,14 +31,13 @@ block content
             +pricing-card('GitHub')
               ul
                 li Free public repositories
-                li Private repositories: #[strong $7]/month
-                li Free private repositories for&nbsp;
-                  a(rel="nofollow" target="_blank", href="https://education.github.com/pack") students
+                li Free private repositories<br>
+                  | (limited to 3 collaborators)
                 li Host on your servers: #[strong $21]/user/month
                 li
-                  .li-filler21
-                  .li-filler21
-                  .li-filler25
+                  .li-filler38
+                  .li-filler38
+                  .li-filler16
                   +github-signup
             +pricing-card('Bitbucket')
               ul
