Fixed paths for GitHub

--- a/_includes/section-hero.html
+++ b/_includes/section-hero.html
@@ -19,7 +19,7 @@ mixin section-hero(content)
       <div class="row">
           <div class="hero__box">
               <div class="text-center hidden-xs col-sm-5">
-                <img class="hero__icon" src="/assets/img/icons/{{include.icon}}" alt="{{include.title}} icon" />
+                <img class="hero__icon" src="{{ site.baseurl }}/assets/img/icons/{{include.icon}}" alt="{{include.title}} icon" />
               </div>
               <div class="hero__text col-xs-12 col-sm-7 mb7">
                   <h1 class="text-center">{{include.name}}</h1>
