--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     property="og:description"
     content="{{ site.description }}"
   />
-  <meta property="og:image" content="/assets/img/fb_og_img.png" />
+  <meta property="og:image" content="{{ site.baseurl }}/assets/img/fb_og_img.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@SebaWitowski" />
   <meta name="twitter:creator" content="@SebaWitowski" />
@@ -23,12 +23,12 @@
     name="twitter:description"
     content="{{ site.description }}"
   />
-  <meta name="twitter:image" content="/assets/img/twitter_card_img.png" />
+  <meta name="twitter:image" content="{{ site.baseurl }}/assets/img/twitter_card_img.png" />
   <title>Best tools for launching your website - DeployStack</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/apple-touch-icon.png?v=20201017' | relative_url }}">
-  <!--[if IE]><link rel="shortcut icon" href="/assets/favicon.ico?v=20201017"><![endif]-->
-  <link rel="shortcut icon" href="{{ '/assets/favicon.ico?v=20201017' | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/assets/apple-touch-icon.png?v=20201017'">
+  <!--[if IE]><link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico?v=20201017"><![endif]-->
+  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico?v=20201017">
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,500,500italic,700,700italic%7CMaterial+Icons"
@@ -37,6 +37,6 @@
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
   />
-  <link rel="stylesheet" href="/assets/css/frameworks.min.css?v=1.0.2" />
-  <link rel="stylesheet" href="/assets/css/main.min.css?v=1.0.2" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/frameworks.min.css?v=1.0.2" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.min.css?v=1.0.2" />
 </head>
