Fixed broken links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,7 +32,7 @@
           for money (only for domains providers).<br /><br />Affiliation program
           doesn't affect whether a company is recommended or not. You can read
           more about how I select companies/tools on the
-          <a href="/contact">About &amp; contact</a> page.
+          <a href="{{ site.baseurl }}/contact">About &amp; contact</a> page.
         </p>
       </div>
       <div class="modal-footer">
@@ -70,7 +70,7 @@
           >
           and
           <a
-            href="http://www.freepik.com/free-vector/rocket-flying-out-of-the-monitor_765338.htm"
+            href="https://www.freepik.com/free-vector/rocket-flying-out-monitor_765338.htm"
             target="_blank"
             >Rocket image by freepik</a
           ></span
@@ -79,14 +79,14 @@
       <div class="social-icons pull-right">
         <a
           class="js-social-share dib pa2"
-          href="http://twitter.com/share?url=https://deploystack.io&amp;amp;text=DeployStack: curated list of tools for launching websites&amp;amp;hashtags=deploystack"
+          href="http://twitter.com/share?url={{ site.url }}{{ site.baseurl }}&amp;amp;text=DeployStack: curated list of tools for launching websites&amp;amp;hashtags=deploystack"
           target="_blank"
           title="Twitter share"
           ><i class="fa fa-twitter"></i
         ></a>
         <a
           class="js-social-share dib pa2"
-          href="http://www.facebook.com/sharer.php?u=https://deploystack.io"
+          href="http://www.facebook.com/sharer.php?u={{ site.url }}{{ site.baseurl }}"
           target="_blank"
           title="Facebook share"
           ><i class="fa fa-facebook"></i></a>
