--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     content="{{ site.description }}"
   />
 
-  <meta property="og:url" content="{{ site.description }}"/>
+  <meta property="og:url" content="{{ site.url }}{{ site.baseurl }}/"/>
   <meta property="og:type" content="website" />
   <meta property="og:title" content="DeployStack" />
   <meta
